--- a/11 - Custom Video Player/style.css
+++ b/11 - Custom Video Player/style.css
@@ -2,7 +2,9 @@ html {
   box-sizing: border-box;
 }
 
-*, *:before, *:after {
+*,
+*:before,
+*:after {
   box-sizing: inherit;
 }
 
@@ -12,16 +14,23 @@ body {
   display: flex;
   background: #7A419B;
   min-height: 100vh;
-  background: linear-gradient(135deg, #7c1599 0%,#921099 48%,#7e4ae8 100%);
+  background: linear-gradient(135deg, #7c1599 0%, #921099 48%, #7e4ae8 100%);
   background-size: cover;
   align-items: center;
   justify-content: center;
 }
 
+.full-screen div {
+  border: 2px white solid;
+  width: 50%;
+  padding: 5px;
+  margin-left: 10px;
+}
+
 .player {
   max-width: 750px;
-  border: 5px solid rgba(0,0,0,0.2);
-  box-shadow: 0 0 20px rgba(0,0,0,0.2);
+  border: 5px solid rgba(0, 0, 0, 0.2);
+  box-shadow: 0 0 20px rgba(0, 0, 0, 0.2);
   position: relative;
   font-size: 0;
   overflow: hidden;
@@ -71,7 +80,7 @@ body {
   transform: translateY(100%) translateY(-5px);
   transition: all .3s;
   flex-wrap: wrap;
-  background: rgba(0,0,0,0.1);
+  background: rgba(0, 0, 0, 0.1);
 }
 
 .player:hover .player__controls {
@@ -82,7 +91,7 @@ body {
   height: 15px;
 }
 
-.player__controls > * {
+.player__controls>* {
   flex: 1;
 }
 
@@ -93,7 +102,7 @@ body {
   flex-basis: 100%;
   height: 5px;
   transition: height 0.3s;
-  background: rgba(0,0,0,0.5);
+  background: rgba(0, 0, 0, 0.5);
   cursor: ew-resize;
 }
 
@@ -122,7 +131,7 @@ input[type=range]::-webkit-slider-runnable-track {
   height: 8.4px;
   cursor: pointer;
   box-shadow: 1px 1px 1px rgba(0, 0, 0, 0), 0 0 1px rgba(13, 13, 13, 0);
-  background: rgba(255,255,255,0.8);
+  background: rgba(255, 255, 255, 0.8);
   border-radius: 1.3px;
   border: 0.2px solid rgba(1, 1, 1, 0);
 }
@@ -135,7 +144,7 @@ input[type=range]::-webkit-slider-thumb {
   cursor: pointer;
   -webkit-appearance: none;
   margin-top: -3.5px;
-  box-shadow:0 0 2px rgba(0,0,0,0.2);
+  box-shadow: 0 0 2px rgba(0, 0, 0, 0.2);
 }
 
 input[type=range]:focus::-webkit-slider-runnable-track {
